// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`LoadingAnimation test LoadingAnimation is loading snapshot 1`] = `
=======
exports[`LoadingAnimation test LoadingAnimation isLoading snapshot 1`] = `
>>>>>>> 01d89d95cd9adb97c92c6c974c6582dd77f2dda1
<div
  className="w-100 h-100 d-flex justify-content-center align-items-center"
  style={
    Object {
      "minHeight": "150px",
    }
  }
>
  <div
    className="progress"
    style={
      Object {
        "width": "80%",
      }
    }
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      className="progress-bar progress-bar-striped progress-bar-animated"
      role="progressbar"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      Loading...
    </div>
  </div>
</div>
`;

<<<<<<< HEAD
exports[`LoadingAnimation test LoadingAnimation is not loading snapshot 1`] = `<div />`;
=======
exports[`LoadingAnimation test LoadingAnimation not isLoading snapshot 1`] = `<div />`;
>>>>>>> 01d89d95cd9adb97c92c6c974c6582dd77f2dda1
